--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
     mysql-server:
-        image: mysql:8
+        image: mysql/mysql-server
         ports:
             - "13306:3306"     
         environment:
